lab9/tests/invalid/wrongDescription.js
module.exports = {
    "category_id": "10",
    "title": "watches",
    "content": "somecont",
    "price": "text",
    "old_price": "50",
    "status": "0",
    "keywords": "New keywords",
    "description": 10,
    "hit": "0"
}